--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -291,9 +291,11 @@
 
             			// Simple GET request example:
             			$http({
-            			  method: 'PUT',
-            	  		  url: 'http://webtech.kettering.edu/~vecc0396/cs461/kuwork/'+selectedModel+'/'+mode+'.php'
+            			  method: 'POST',
+            	  		  url: 'http://webtech.kettering.edu/~vecc0396/cs461/kuwork/'+selectedModel+'/'+mode+'.php',
+                      data: { data }
             			}).then(function successCallback(response) {
+                    console.log(response);
             			    // this callback will be called asynchronously
             			    // when the response is available
             			  }, function errorCallback(response) {
