--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -403,7 +403,7 @@
 
               $http({
                   method: 'GET',
-                  url: unsanitized_address.html();
+                  url: unsanitized_address.html()
               }).then(function successCallback(response) {
                   console.log("successfully deleted student " + ID);
               }, function errorCallbac(response) {
