--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -33,23 +33,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Activity</a></li>
-                    <li><a href="#">Company</a></li>
-                    <li><a href="#">Residence</a></li>
-                    <!-- <li role="separator" class="divider"></li> -->
-                    <li><a href="#">Student</a></li>
-                    <!--<li role="separator" class="divider"></li>-->
-                  </ul>
-                </li>
+                  <div>
+                    <select ng-model="currentTable" ng-options="dropdown for dropdown in KUCtrl.dropDownMenu">
+                    </select>
+                  </div>
               </ul>
               <form class="navbar-form navbar-left">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Search">
+                  <input type="text" class="form-control" placeholder="Search" ng-model="searchQuery">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default" ng-click="KUCtrl.searchTable()">Submit</button>
               </form>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -193,6 +186,12 @@
             kuCtrl.companyList = [];
             kuCtrl.resienceList = [];
 
+            kuCtrl.dropDownMenu = [
+              "student",
+              "company",
+              "activity",
+              "residence"
+            ];
             kuCtrl.modelFields = [
  	        {
     		    'table' : 'company',
@@ -311,8 +310,26 @@
 
             		}
 
-            }
+            };
 
+            kuCtrl.searchTable = function () {
+              console.log($scope.currentTable);
+
+              console.log($scope.searchQuery);
+
+              var searchURL = 'http://webtech.kettering.edu/~vecc0396/cs461/kuwork/search.php?table=' 
+                    + $scope.currentTable + '&query=' + $scope.searchQuery;
+
+              $http({
+                  method: 'GET',
+                  url: encodeURIComponent(searchURL)
+              }).then(function successCallback(response) {
+                  console.log("successful seach");
+              }, function errorCallbac(response) {
+                  console.log("Failed to search table " + $scope.currentTable);
+              });
+
+            };
 
             kuCtrl.deleteActivity = function (ID) {
               //Get index
