spelling error correction

--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -151,7 +151,7 @@
               </div>
               <div class="modal-body">
                 <div ng-repeat="student in KUCtrl.studentList track by $index">
-                  <div>Studnt name: {{student.name}}</div>
+                  <div>Student name: {{student.name}}</div>
                   <div>Class staning: {{student.class_standing}}</div>
                   <div>Major: {{student.major}}</div>
                   <div>Degree: {{student.degree}}</div>
@@ -192,7 +192,7 @@
                   <div>Rent: {{result.rent | currency}}</div>
                 </div>
                 <div ng-if="KUCtrl.studentSearch()">
-                  <div>Studnt name: {{result.name}}</div>
+                  <div>Student name: {{result.name}}</div>
                   <div>Class staning: {{result.class_standing}}</div>
                   <div>Major: {{result.major}}</div>
                   <div>Degree: {{result.degree}}</div>
