Updating most pages

--- a/rental/car_add.html
+++ b/rental/car_add.html
@@ -30,6 +30,10 @@
 				<td><input type="text" name="license_number"></td>
 			</tr>
 			<tr>
+				<td>Condition</td>
+				<td><input type="text" name="condition"></td>
+			</tr>
+			<tr>
 				<td>State</td>
 				<td><input type="text" name="state"></td>
 			</tr>
