--- a/rental/cust_add.html
+++ b/rental/cust_add.html
@@ -7,7 +7,7 @@
 	<a href="cust_index.php">Customer Home</a>
 	<br/><br/>
 
-	<form action="add.php" method="post" name="form1">
+	<form action="cust_add.php" method="post" name="form1">
 		<table width="25%" border="0">
 			<tr>
 				<td>First Name</td>
@@ -20,6 +20,10 @@
 			<tr>
 				<td>Street Address</td>
 				<td><input type="text" name="street_address"></td>
+			</tr>
+			<tr>
+				<td>State</td>
+				<td><input type="text" name="state"></td>
 			</tr>
 			<tr>
 				<td>City</td>
