--- a/rental/main_add.html
+++ b/rental/main_add.html
@@ -10,6 +10,10 @@
 	<form action="main_add.php" method="post" name="form1">
 		<table width="25%" border="0">
 			<tr>
+				<td>Garage Name</td>
+				<td><input type="text" name="garage_name"></td>
+			</tr>
+			<tr>
 				<td>Street Address</td>
 				<td><input type="text" name="street_address"></td>
 			</tr>
@@ -18,12 +22,32 @@
 				<td><input type="text" name="city"></td>
 			</tr>
 			<tr>
+				<td>State</td>
+				<td><input type="text" name="state"></td>
+			</tr>
+			<tr>
 				<td>Zip</td>
 				<td><input type="text" name="zip"></td>
 			</tr>
 			<tr>
+				<td>Estimate</td>
+				<td><input type="text" name="estimate"></td>
+			</tr>
+			<tr>
 				<td>Cost</td>
 				<td><input type="text" name="cost"></td>
+			</tr>
+			<tr>
+				<td>Procedure Name</td>
+				<td><input type="text" name="procedure_name"></td>
+			</tr>
+			<tr>
+				<td>Procedure Date</td>
+				<td><input type="text" name="procedure_date"></td>
+			</tr>
+			<tr>
+				<td>Authorization Number</td>
+				<td><input type="text" name="authorization_number"></td>
 			</tr>
 			<tr>
 				<td></td>
