--- a/rental/res_add.html
+++ b/rental/res_add.html
@@ -14,6 +14,10 @@
 				<td><input type="text" name="rate_period"></td>
 			</tr>
 			<tr>
+				<td>Rate</td>
+				<td><input type="text" name="rate"></td>
+			</tr>
+			<tr>
 				<td>Discount</td>
 				<td><input type="text" name="discount"></td>
 			</tr>
@@ -42,6 +46,10 @@
 				<td><input type="text" name="gas_level"></td>
 			</tr>
 			<tr>
+				<td>Gas Charge</td>
+				<td><input type="text" name="gas_charge"></td>
+			</tr>
+			<tr>
 				<td>Date Rented</td>
 				<td><input type="text" name="date_rented"></td>
 			</tr>
@@ -64,6 +72,10 @@
 			<tr>
 				<td>Mileage Charge</td>
 				<td><input type="text" name="mileage_charge"></td>
+			</tr>
+			<tr>
+				<td>Final Charge</td>
+				<td><input type="text" name="final_charge"></td>
 			</tr>
 			<tr>
 				<td>Start Miles</td>
