Successful query update

--- a/rental/car_add.html
+++ b/rental/car_add.html
@@ -31,7 +31,7 @@
 			</tr>
 			<tr>
 				<td>Condition</td>
-				<td><input type="text" name="condition"></td>
+				<td><input type="text" name="car_condition"></td>
 			</tr>
 			<tr>
 				<td>State</td>
