Started to modify add and edit for project

--- a/kuwork/company/add.html
+++ b/kuwork/company/add.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Add Activity</title>
+	<title>Add Company</title>
 </head>
 
 <body>
@@ -10,28 +10,16 @@
 	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/activity/add.php" method="post" name="form1">
 		<table>
 			<tr>
-				<td>Coordinator Email</td>
-				<td><input type="text" name="coordinator_email"></td>
+				<td>Company Name</td>
+				<td><input type="text" name="comp_name"></td>
 			</tr>
 			<tr>
 				<td>Description</td>
 				<td><input type="text" name="description"></td>
 			</tr>
 			<tr>
-				<td>Start Date</td>
-				<td><input type="text" name="start_date"></td>
-			</tr>
-			<tr>
-				<td>Start Time</td>
-				<td><input type="text" name="start_time"></td>
-			</tr>
-			<tr>
-				<td>End Date</td>
-				<td><input type="text" name="end_date"></td>
-			</tr>
-			<tr>
-				<td>End Time</td>
-				<td><input type="text" name="end_time"></td>
+				<td>Address</td>
+				<td><input type="text" name="address_id"></td>
 			</tr>
 			<tr>
 				<td></td>
