--- a/kuwork/vehicle/add.html
+++ b/kuwork/vehicle/add.html
@@ -7,35 +7,31 @@
 	<a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/index.html">Activity Home</a>
 	<br/><br/>
 
-	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/activity/add.php" method="post" name="form1">
+	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/vehicle/add.php" method="post" name="form1">
 		<table>
 			<tr>
-				<td>Coordinator Email</td>
-				<td><input type="text" name="coordinator_email"></td>
+				<td>Vin</td>
+				<td><input type="text" name="vin"></td>
 			</tr>
 			<tr>
-				<td>Description</td>
-				<td><input type="text" name="description"></td>
+				<td>Make</td>
+				<td><input type="text" name="make"></td>
 			</tr>
 			<tr>
-				<td>Start Date</td>
-				<td><input type="text" name="start_date"></td>
+				<td>Model</td>
+				<td><input type="text" name="model"></td>
 			</tr>
 			<tr>
-				<td>Start Time</td>
-				<td><input type="text" name="start_time"></td>
+				<td>Capacity</td>
+				<td><input type="text" name="capacity"></td>
 			</tr>
 			<tr>
-				<td>End Date</td>
-				<td><input type="text" name="end_date"></td>
-			</tr>
-			<tr>
-				<td>End Time</td>
-				<td><input type="text" name="end_time"></td>
+				<td>Owner Email</td>
+				<td><input type="text" name="owner_email"></td>
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="submit" name="Submit" value="Add"></td>
+				<td><input type="update" name="Update" value="Add"></td>
 			</tr>
 		</table>
 	</form>
