--- a/kuwork/student/add.html
+++ b/kuwork/student/add.html
@@ -1,41 +1,42 @@
+
 <html>
 <head>
 	<title>Add Activity</title>
 </head>
 
 <body>
-	<a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/index.html">Activity Home</a>
+	<a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/index.html">Home</a>
 	<br/><br/>
 
-	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/activity/add.php" method="post" name="form1">
+	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/student/add.php" method="post" name="form1">
 		<table>
 			<tr>
-				<td>Coordinator Email</td>
-				<td><input type="text" name="coordinator_email"></td>
+				<td>Email</td>
+				<td><input type="text" name="email"></td>
 			</tr>
 			<tr>
-				<td>Description</td>
-				<td><input type="text" name="description"></td>
+				<td>Phone Number</td>
+				<td><input type="text" name="phone_number"></td>
 			</tr>
 			<tr>
-				<td>Start Date</td>
-				<td><input type="text" name="start_date"></td>
+				<td>Name</td>
+				<td><input type="text" name="name"></td>
 			</tr>
 			<tr>
-				<td>Start Time</td>
-				<td><input type="text" name="start_time"></td>
+				<td>Degree</td>
+				<td><input type="text" name="degree"></td>
 			</tr>
 			<tr>
-				<td>End Date</td>
-				<td><input type="text" name="end_date"></td>
+				<td>Major/td>
+				<td><input type="text" name="major"></td>
 			</tr>
 			<tr>
-				<td>End Time</td>
-				<td><input type="text" name="end_time"></td>
+				<td>Class Standing</td>
+				<td><input type="text" name="class_standing"></td>
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="submit" name="Submit" value="Add"></td>
+				<td><input type="update" name="Update" value="Add"></td>
 			</tr>
 		</table>
 	</form>
