--- a/kuwork/address/add.html
+++ b/kuwork/address/add.html
@@ -12,19 +12,19 @@
 		<table>
 			<tr>
 				<td>Street Address</td>
-				<td><input type="text" name="street" value="<?php echo $street ?>"></td>
+				<td><input type="text" name="street"></td>
 			</tr>
 			<tr>
 				<td>City</td>
-				<td><input type="text" name="city" value="<?php echo $city ?>"></td>
+				<td><input type="text" name="city"></td>
 			</tr>
 			<tr>
 				<td>State</td>
-				<td><input type="text" name="state" value="<?php echo $state ?>"></td>
+				<td><input type="text" name="state"></td>
 			</tr>
 			<tr>
 				<td>Zip Code</td>
-				<td><input type="text" name="zip_code" value="<?php echo $zip_code ?>"></td>
+				<td><input type="text" name="zip_code"></td>
 			</tr>
 			<tr>
 				<td></td>
