--- a/kuwork/residence/add.html
+++ b/kuwork/residence/add.html
@@ -11,15 +11,15 @@
 		<table>
 			<tr>
 				<td>Email</td>
-				<td><input type="text" name="email" value="<?php echo $email ?>"></td>
+				<td><input type="text" name="email"></td>
 			</tr>
 			<tr>
 				<td>Phone Number</td>
-				<td><input type="text" name="phone_number" value="<?php echo $phone_number ?>"></td>
+				<td><input type="text" name="phone_number"></td>
 			</tr>
 			<tr>
 				<td>Name</td>
-				<td><input type="text" name="name" value="<?php echo $name?>"></td>
+				<td><input type="text" name="name"></td>
 			</tr>
 			<tr>
 				<td>Degree</td>
