changed background color

--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -19,7 +19,7 @@
           <script src="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/dist/js/vex.combined.min.js"></script>
 
     </head>
-    <body>
+    <body style="background-color:rgb(240,240,240);">
       <div ng-app="kuWorkApp"><div ng-controller="kuWorkController as KUCtrl">
         <nav class="navbar navbar-default">
           <div class="container-fluid">
