--- a/kuwork/student/add.html
+++ b/kuwork/student/add.html
@@ -36,7 +36,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="update" name="Update" value="Add"></td>
+				<td><input type="submit" name="Update" value="Add"></td>
 			</tr>
 		</table>
 	</form>
