--- a/kuwork/residence/add.html
+++ b/kuwork/residence/add.html
@@ -10,28 +10,28 @@
 	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/student/edit.php" method="post" name="form1">
 		<table>
 			<tr>
-				<td>Email</td>
-				<td><input type="text" name="email"></td>
+				<td>Landlord Email</td>
+				<td><input type="text" name="landlord_email" value="<?php echo $landlord_email ?>"></td>
 			</tr>
 			<tr>
-				<td>Phone Number</td>
-				<td><input type="text" name="phone_number"></td>
+				<td>Landlord Phone Number</td>
+				<td><input type="text" name="landlord_phone_num" value="<?php echo $landlord_phone_num ?>"></td>
 			</tr>
 			<tr>
-				<td>Name</td>
-				<td><input type="text" name="name"></td>
+				<td>Rent</td>
+				<td><input type="text" name="rent" value="<?php echo $rent ?>"></td>
 			</tr>
 			<tr>
-				<td>Degree</td>
-				<td><input type="text" name="start_time"></td>
+				<td>Address ID</td>
+				<td><input type="text" name="address_id" value="<?php echo $address_id ?>"></td>
 			</tr>
 			<tr>
-				<td>End Date</td>
-				<td><input type="text" name="end_date"></td>
+				<td>Reviews</td>
+				<td><input type="text" name="residence_reviews" value="<?php echo $residence_reviews ?>"></td>
 			</tr>
 			<tr>
-				<td>End Time</td>
-				<td><input type="text" name="end_time"></td>
+				<td>Residence Image</td>
+				<td><input type="text" name="residence_image" value="<?php echo $residence_image ?>"></td>
 			</tr>
 			<tr>
 				<td></td>
