--- a/kuwork/residence/add.html
+++ b/kuwork/residence/add.html
@@ -7,31 +7,31 @@
 	<a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/index.html">Activity Home</a>
 	<br/><br/>
 
-	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/student/edit.php" method="post" name="form1">
+	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/student/add.php" method="post" name="form1">
 		<table>
 			<tr>
 				<td>Landlord Email</td>
-				<td><input type="text" name="landlord_email" value="<?php echo $landlord_email ?>"></td>
+				<td><input type="text" name="landlord_email"></td>
 			</tr>
 			<tr>
 				<td>Landlord Phone Number</td>
-				<td><input type="text" name="landlord_phone_num" value="<?php echo $landlord_phone_num ?>"></td>
+				<td><input type="text" name="landlord_phone_num"></td>
 			</tr>
 			<tr>
 				<td>Rent</td>
-				<td><input type="text" name="rent" value="<?php echo $rent ?>"></td>
+				<td><input type="text" name="rent"></td>
 			</tr>
 			<tr>
 				<td>Address ID</td>
-				<td><input type="text" name="address_id" value="<?php echo $address_id ?>"></td>
+				<td><input type="text" name="address_id"></td>
 			</tr>
 			<tr>
 				<td>Reviews</td>
-				<td><input type="text" name="residence_reviews" value="<?php echo $residence_reviews ?>"></td>
+				<td><input type="text" name="residence_reviews"></td>
 			</tr>
 			<tr>
 				<td>Residence Image</td>
-				<td><input type="text" name="residence_image" value="<?php echo $residence_image ?>"></td>
+				<td><input type="text" name="residence_image"></td>
 			</tr>
 			<tr>
 				<td></td>
