--- a/kuwork/index.html
+++ b/kuwork/index.html
@@ -80,11 +80,11 @@
                   <div> Address ID: {{company.address_id}},</div>
                   <div> Description: {{company.description}}</div>
                   <button type="button" class="btn btn-primary" ng-click="KUCtrl.deleteCompany(company.comp_name)">DELETE</button>
-                  <a href="#"><button class="btn btn-primary" type="button">Update</button></a>
+                  <a href=""><button class="btn btn-primary" type="button">Update</button></a>
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary" ng-click="KUCtrl.modifyObject('company')">ADD</button>
+                <a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/company/add.html"><button type="button" class="btn btn-primary" >ADD</button></a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
@@ -110,7 +110,7 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary">ADD</button>
+                <a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/residence/add.html"><button type="button" class="btn btn-primary">ADD</button></a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
@@ -137,7 +137,7 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary">ADD</button>
+                <a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/activity/add.html"><button type="button" class="btn btn-primary">ADD</button></a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
@@ -165,7 +165,7 @@
                 </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary">ADD</button>
+                <a href="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/student/add.html"><button type="button" class="btn btn-primary">ADD</button></a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
