Added name field

--- a/kuwork/activity/add.html
+++ b/kuwork/activity/add.html
@@ -10,6 +10,10 @@
 	<form action="http://webtech.kettering.edu/~vecc0396/cs461/kuwork/activity/add.php" method="post" name="form1">
 		<table>
 			<tr>
+				<td>Name</td>
+				<td><input type="text" name="name"></td>
+			</tr>
+			<tr>
 				<td>Coordinator Email</td>
 				<td><input type="text" name="coordinator_email"></td>
 			</tr>
