--- a/kuwork/activity/add.html
+++ b/kuwork/activity/add.html
@@ -39,7 +39,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="submit" name="Submit" value="Add"></td>
+				<td><input type="submit" name="update" value="Add"></td>
 			</tr>
 		</table>
 	</form>
